# Huxley

./: .dockerignore  .env.example  .gitignore  DOCKER.md  DOCKER_ARCHITECTURE.md  DOCKER_IMPLEMENTATION.md  DOCKER_INDEX.md  DOCKER_LOCAL_MODELS_ENHANCEMENT.md  DOCKER_LOCAL_MODELS_VISUAL_GUIDE.md  DOCKER_PUBLISH.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docs.md  pyproject.toml
.github/workflows/: docker-image.yml
src/huxley/: __init__.py  cli.py
src/huxley/agents/: __init__.py  base.py  orchestrator.py
src/huxley/api/: __init__.py  app.py
src/huxley/api/routes/: agents.py  completions.py  health.py  tools.py
src/huxley/cli/: __init__.py  config.py  entry.py  main.py  ui.py
src/huxley/cli/commands/: __init__.py  automate.py  binder.py  chat.py  check.py  config_cmd.py  generate.py  research.py  setup.py
src/huxley/compute/: __init__.py  tasks.py  worker.py
src/huxley/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/huxley/docker/: __init__.py  __main__.py  onboarding.py
src/huxley/docker/static/: app.js  style.css
src/huxley/docker/templates/: index.html
src/huxley/llm/: __init__.py  auto_selector.py  client.py
src/huxley/llm/providers/: __init__.py  anthropic.py  base.py  cohere.py  openai.py
src/huxley/memory/: __init__.py  conversation.py  factory.py  postgres_store.py  sqlite_store.py  store.py
src/huxley/memory/migrations/: __init__.py  exploration_schema.py  schema.py
src/huxley/prompts/: __init__.py  registry.py  templates.py
src/huxley/tools/: __init__.py  builtin.py  executor.py  registry.py
src/huxley/tools/biology/: __init__.py  diffusion.py  rcsb.py
src/huxley/tools/chemistry/: __init__.py  docking.py  literature.py  molecules.py
src/huxley/verification/: __init__.py  validator.py
src/huxley/visualization/: __init__.py  molecule_viewer.py
tests/: __init__.py  test_diffusion.py  test_memory.py  test_prompts.py  test_setup.py  test_tools.py  test_types.py  test_verification.py
